force-app/main/default/objects/Player__c/Player__c.object-meta.xml
<CustomObject>
    <description>A person who eagers to win</description>
    <label>Player</label>
    <nameField>
        <displayFormat>PRL-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>