force-app/main/default/objects/Player__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(IsBlackList__c = true,	
			IMAGE(&quot;https://practice131-dev-ed--c.vf.force.com/resource/1664460403000/bandit?&quot;, &quot;bandit&quot;, 25,25),
			IF(TotalMoneyWon__c &lt; 0, 
						IMAGE(&quot;https://practice131-dev-ed--c.vf.force.com/resource/1664460686000/warning?&quot;, &quot;warning&quot;, 25,25),
						IF(TotalMoneyWon__c &gt;= 0 &amp;&amp; TotalMoneyWon__c &lt; 1000,
									null,
									IF(TotalMoneyWon__c &gt;= 1000 &amp;&amp; TotalMoneyWon__c &lt; 10000 ,
												IMAGE(&quot;https://practice131-dev-ed--c.vf.force.com/resource/1664457974000/Star?&quot;, &quot;star&quot;, 25,25),  
									   IMAGE(&quot;https://practice131-dev-ed--c.vf.force.com/resource/1664458313000/diamond?&quot;, &quot;diamond&quot;, 25,25)
												)
			     )
						)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>